--- a/bin/bigbrother.service
+++ b/bin/bigbrother.service
@@ -1,4 +1,9 @@
 #!/bin/bash 
 #
 
-/usr/local/bin/http-server /opt/bigbrother -s &
+#/usr/local/bin/http-server /opt/bigbrother -s &
+
+web_path=/opt/bigbrother/web
+
+cd ${web_path}
+sudo su -c "${web_path}/node_modules/.bin/pm2 ${1} ${web_path}/dist/main.js" bigbrother
